--- a/ConfiguracionUsuarios/SupaWindow.xaml
+++ b/ConfiguracionUsuarios/SupaWindow.xaml
@@ -4,17 +4,32 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConfiguracionUsuarios"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="SupaWindow" Height="600" Width="800" WindowStartupLocation="CenterScreen">
-    
+        Title="SupaWindow" Height="600" Width="800" WindowStartupLocation="CenterScreen" WindowState="Normal" WindowStyle="SingleBorderWindow" >
+
+    <!--<Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Rectangle Name="rect" Width="100" VerticalAlignment="Stretch" Fill="#99000000" Visibility="Collapsed" />
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="32" Height="32" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Right" Background="White" Click="ButtonAx_Click">&gt;</Button>
+    </Grid>-->
+    <!--
+
     <Grid>
         
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        -->
+    <!--<Rectangle Name="rect" Width="100" VerticalAlignment="Stretch" Fill="#99000000" Visibility="Collapsed" />-->
+    <!--
+        <Button Grid.Column="1" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="32" Height="32" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Left" Background="White" Click="ButtonAx_Click">&gt;</Button>
 
-        <Rectangle Grid.Column="0" Margin="0,0,0,0">
+        <Rectangle Name="rect" Grid.Column="0" Margin="0,0,0,0">
             <Rectangle.Fill>
                 <SolidColorBrush Color="#FF1885A1"/>
             </Rectangle.Fill>
@@ -24,7 +39,7 @@
 
             <Label Name="lblCaption" Content="NS" FontWeight="Normal"  Margin="0,0,0,0" FontFamily="Consolas" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="1" FontSize="8" Height="48"/>
 
-            <Button Grid.Column="0" Cursor="Hand" MouseEnter="btnShowCaption" MouseLeave="btnShowSelected" Name="btnUSUARIOS" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click" Margin="0,2,0,0" BorderBrush="{x:Null}" FontWeight="Bold" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Foreground="White" Background="{x:Null}" Padding="0" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" MouseEnter="btnShowCaption" MouseLeave="btnShowSelected" Name="btnUSUARIOS" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click" Margin="0,2,0,0" BorderBrush="{x:Null}" FontWeight="Bold" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Foreground="White" Background="{x:Null}" Padding="0" FontFamily="Consolas" FontSize="14" Height="50">
                 <Image Source="/ConfiguracionUsuarios;component/Resources/32.png" Width="32" Height="32" />
             </Button>
 
@@ -32,7 +47,7 @@
                 <Image Source="/ConfiguracionUsuarios;component/Resources/aaa.png" Width="32" Height="32" />
             </Button>
 
-            <!--<Button Grid.Column="0" Cursor="Hand" MouseEnter="btnShowCaption" MouseLeave="btnShowSelected" ToolTip="EMBALADO" Name="btnPEDIDOS" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" FontWeight="Bold" Background="{x:Null}" Foreground="White" BorderBrush="{x:Null}" HorizontalContentAlignment="Left" VerticalContentAlignment="Stretch">
+            <Button Grid.Column="0" Cursor="Hand" MouseEnter="btnShowCaption" MouseLeave="btnShowSelected" ToolTip="EMBALADO" Name="btnPEDIDOS" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" FontWeight="Bold" Background="{x:Null}" Foreground="White" BorderBrush="{x:Null}" HorizontalContentAlignment="Left" VerticalContentAlignment="Stretch">
                 <Image Source="/IngresoPedidos;component/Resources/key.png" Width="32" Height="32" />
             </Button>
 
@@ -64,12 +79,245 @@
 
             <Button Cursor="Hand" Grid.Column="0" MouseEnter="btnShowCaption" MouseLeave="btnShowSelected" Name="btnINFORMES" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0">
                 <Image Source="/IngresoPedidos;component/Resources/list.png" Width="32" Height="32" />
-            </Button>-->
+            </Button>
 
+        </StackPanel>
+        <StackPanel VerticalAlignment="Bottom" Margin="0,0,0,10">
+            <Button Cursor="Hand" Grid.Column="0" MouseEnter="btnShowCaption" MouseLeave="btnShowSelected" Name="btnSUGERENCIAS" Style="{StaticResource hamburgerMenuButton}" Click="BtnSUGERENCIAS_Click"   Margin="0,0,0,0">
+                <Image Source="/Configuracionusuarios;component/Resources/suggestion.png" Width="32" Height="32" />
+            </Button>
         </StackPanel>
 
         <ContentControl Grid.Column="1" x:Name="contentControl" Margin="0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" />
 
+    </Grid>-->
+    <Window.Resources>
+        <Storyboard x:Key="OpenMenu">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Width)" Storyboard.TargetName="GridMenu">
+                <EasingDoubleKeyFrame KeyTime="0" Value="75"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="200"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+        <Storyboard x:Key="CloseMenu">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Width)" Storyboard.TargetName="GridMenu">
+                <EasingDoubleKeyFrame KeyTime="0" Value="200"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="75"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+    </Window.Resources>
+
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonOpenMenu">
+            <BeginStoryboard Storyboard="{StaticResource OpenMenu}"/>
+        </EventTrigger>
+        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonCloseMenu">
+            <BeginStoryboard Storyboard="{StaticResource CloseMenu}"/>
+        </EventTrigger>
+    </Window.Triggers>
+
+    <Grid Background="#FFDEDEDE">
+
+        <Grid x:Name="GridMain" Margin="75,50,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <!--<Grid.ColumnDefinitions>
+            <ColumnDefinition Width="79*"/>
+            <ColumnDefinition Width="32*"/>
+            <ColumnDefinition Width="631*"/>
+        </Grid.ColumnDefinitions>-->
+
+
+        <Grid Height="50" VerticalAlignment="Top" Background="#FF5C99D6">
+            <Grid.Effect>
+                <DropShadowEffect BlurRadius="1" ShadowDepth="1" Color="#FFACACAC"/>
+            </Grid.Effect>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <TextBlock Text="Sebastián Sanchez" VerticalAlignment="Center" Foreground="White" FontSize="16"/>
+                <materialDesign:PopupBox PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Margin="0" >
+                    <StackPanel Width="150">
+                        <Button Content="Settings"/>
+                        <Button Content="Account"/>
+                        <Button Content="Help"/>
+                        <Separator/>
+                        <Button Content="Logout"/>
+                    </StackPanel>
+                </materialDesign:PopupBox>
+
+            </StackPanel>
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="16">ADMINISTRACION DE USUARIOS</TextBlock>
+        </Grid>
+
+        <Grid x:Name="GridMenu" Width="75" HorizontalAlignment="Left" Background="#FF31577E">
+            <Grid.Effect>
+                <DropShadowEffect BlurRadius="2" ShadowDepth="1" Color="#FFAEAEAE"/>
+            </Grid.Effect>
+            <StackPanel>
+                <Grid Height="100" Background="White" RenderTransformOrigin="0.5,0.5">
+                    <Grid.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Grid.RenderTransform>
+                    
+                    <Button x:Name="ButtonOpenMenu" Height="40" Width="40" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonOpenMenu_Click">
+                        <materialDesign:PackIcon Kind="Menu" Width="25" Height="25"/>
+                    </Button>
+                    <Button x:Name="ButtonCloseMenu" Visibility="Collapsed" Height="40" Width="40" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonCloseMenu_Click">
+                        <materialDesign:PackIcon Kind="ArrowLeft" Width="25" Height="25"/>
+                    </Button>
+
+                    <!--<Image Height="80" VerticalAlignment="Bottom"/>-->
+
+                </Grid>
+
+                <ListView x:Name="ListViewMenu" Foreground="#FF5C99D6" Height="640" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="ListViewMenu_SelectionChanged">
+                    <ListViewItem x:Name="ItemHome" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="User" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemCreate" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Rca" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Create" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Ticket" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Tickets" VerticalAlignment="Center"  Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Message" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Messages" VerticalAlignment="Center"  Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome1" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="AccountKey" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome2" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="StarOff" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome3" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="SquareRoot" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome4" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="ZipDisk" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome5" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Laptop" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome6" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Golf" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome7" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Number9BoxOutline" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome8" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="PeopleOutline" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome9" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="CloudDownload" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome10" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Accessible" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome11" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="EngineOffOutline" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome12" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Hail" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome13" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Hanger" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome14" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="HowToVote" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome15" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="LocationCity" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome16" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="PackageVariantClosed" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome17" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="PacMan" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome18" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Saxophone" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome19" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Fuel" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHome20" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Zwave" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                </ListView>
+            </StackPanel>
+        </Grid>
     </Grid>
-    
 </Window>
