--- a/ConfiguracionUsuarios/NuevoUsuarioWindow.xaml
+++ b/ConfiguracionUsuarios/NuevoUsuarioWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConfiguracionUsuarios"
         mc:Ignorable="d"
-        Title="Nuevo Usuario" Height="170" Width="240" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" SizeToContent="WidthAndHeight">
-    <Grid Height="141" Width="234">
+        Title="Nuevo Usuario" Height="196" Width="240" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" SizeToContent="WidthAndHeight" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+    <Grid Width="234" Height="167">
         <TextBox Name="tbLegajo" Height="26" Margin="0,10,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="143" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Right" FontFamily="Consolas" FontSize="14"/>
         <TextBox Name="tbNombre" Height="26" Margin="0,40,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="143" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Right" FontFamily="Consolas" FontSize="14"/>
         <TextBox Name="tbApellido" Height="26" Margin="0,70,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="143" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Right" FontFamily="Consolas" FontSize="14"/>
-        <Button x:Name="btnNuevoPedido" Content="Aceptar" ToolTip="Ingresar un Nuevo Pedido a la Base de Datos (CTRL+N)" Margin="0,0,0,10" Width="72" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="btnNuevoUsuario_Click"/>
+        <Button x:Name="btnNuevoPedido" Content="Aceptar" ToolTip="Ingresar un Nuevo Pedido a la Base de Datos (CTRL+N)" Margin="0,0,0,10" Height="24" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="btnNuevoUsuario_Click" Padding="0" Width="72"/>
         <Label Content="LEGAJO" Margin="10,10,158,0" VerticalAlignment="Top" Height="26" HorizontalContentAlignment="Right" FontWeight="Bold"/>
         <Label Content="NOMBRE" Margin="10,40,158,0" VerticalAlignment="Top" Height="26" HorizontalContentAlignment="Right" FontWeight="Bold"/>
         <Label Content="APELLIDO" Margin="10,71,158,0" VerticalAlignment="Top" Height="25" HorizontalContentAlignment="Right" FontWeight="Bold"/>
