--- a/ConfiguracionUsuarios/SupaWindow.xaml
+++ b/ConfiguracionUsuarios/SupaWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ConfiguracionUsuarios"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="SupaWindow" Name="SupaWindows" Height="600" Width="800" WindowStartupLocation="CenterScreen" WindowState="Normal" WindowStyle="SingleBorderWindow" >
+        Title="SupaWindow" Name="SupaWindows" Height="600" Width="800" WindowStartupLocation="CenterScreen" WindowState="Normal" >
 
     <!--<Grid>
         <Grid.ColumnDefinitions>
@@ -115,9 +115,11 @@
         </EventTrigger>
     </Window.Triggers>
 
-    <Grid Background="#FFDEDEDE">
+    <!--<Grid Background="#FFDEDEDE">-->
+    <Grid Background="Green">
 
-        <Grid x:Name="GridMain" Margin="50,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+
+        <Grid x:Name="GridMain" Margin="50,0,0,0" HorizontalAlignment="Stretch" Background="Red"/>
         <!--<Grid.ColumnDefinitions>
             <ColumnDefinition Width="79*"/>
             <ColumnDefinition Width="32*"/>
@@ -159,7 +161,7 @@
                             <TranslateTransform/>
                         </TransformGroup>
                     </Grid.RenderTransform>
-                    
+
                     <Button x:Name="ButtonOpenMenu" Height="40" Width="40" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonOpenMenu_Click">
                         <materialDesign:PackIcon Kind="Menu" Width="25" Height="25"/>
                     </Button>
