--- a/ConfiguracionUsuarios/NuevoUsuarioWindow.xaml
+++ b/ConfiguracionUsuarios/NuevoUsuarioWindow.xaml
@@ -4,16 +4,22 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConfiguracionUsuarios"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Nuevo Usuario" Height="196" Width="240" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" SizeToContent="WidthAndHeight" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
-    <Grid Width="234" Height="167">
-        <TextBox Name="tbLegajo" Height="26" Margin="0,10,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="143" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Right" FontFamily="Consolas" FontSize="14"/>
-        <TextBox Name="tbNombre" Height="26" Margin="0,40,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="143" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Right" FontFamily="Consolas" FontSize="14"/>
-        <TextBox Name="tbApellido" Height="26" Margin="0,70,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="143" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Right" FontFamily="Consolas" FontSize="14"/>
-        <Button x:Name="btnNuevoPedido" Content="Aceptar" ToolTip="Ingresar un Nuevo Pedido a la Base de Datos (CTRL+N)" Margin="0,0,0,10" Height="24" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="btnNuevoUsuario_Click" Padding="0" Width="72"/>
-        <Label Content="LEGAJO" Margin="10,10,158,0" VerticalAlignment="Top" Height="26" HorizontalContentAlignment="Right" FontWeight="Bold"/>
-        <Label Content="NOMBRE" Margin="10,40,158,0" VerticalAlignment="Top" Height="26" HorizontalContentAlignment="Right" FontWeight="Bold"/>
-        <Label Content="APELLIDO" Margin="10,71,158,0" VerticalAlignment="Top" Height="25" HorizontalContentAlignment="Right" FontWeight="Bold"/>
+        Title="Nuevo Usuario" Height="172" Width="196" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" SizeToContent="WidthAndHeight" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+    <Grid Width="190" Height="143">
+        <TextBox x:Name="tbLegajo" materialDesign:HintAssist.Hint="Legajo" HorizontalContentAlignment="Left" HorizontalAlignment="Center" VerticalAlignment="Top" Width="145" Margin="0,10,0,0" Height="26" FontFamily="Consolas" FontSize="14"/>
+        <TextBox x:Name="tbNombre" materialDesign:HintAssist.Hint="Nombre" HorizontalContentAlignment="Left" HorizontalAlignment="Center" VerticalAlignment="Center" Width="145" Margin="0,0,0,25" Height="26" FontFamily="Consolas" FontSize="14"/>
+        <TextBox x:Name="tbApellido" materialDesign:HintAssist.Hint="Apellido" HorizontalContentAlignment="Left" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="145" Margin="0,0,0,40" Height="26" FontFamily="Consolas" FontSize="14"/>
+
+        <!--<TextBox Name="tbLegajo" Height="26" Margin="0,10,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="143" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Right" FontFamily="Consolas" FontSize="14"/>-->
+        <!--<TextBox Name="tbNombre" Height="26" Margin="0,40,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="143" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Right" FontFamily="Consolas" FontSize="14"/>
+        <TextBox Name="tbApellido"  Height="26" Margin="0,70,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="143" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Right" FontFamily="Consolas" FontSize="14"/>-->
+        <Button x:Name="btnNuevoPedido" Content="ACEPTAR" ToolTip="Ingresar un Nuevo Pedido a la Base de Datos (CTRL+N)" Margin="0,0,0,5" Height="24" VerticalAlignment="Bottom" HorizontalAlignment="Center" Click="btnNuevoUsuario_Click" Padding="0" Width="72"/>
+        <!--<Label Content="LEGAJO" Margin="10,10,158,0" VerticalAlignment="Top" Height="26" HorizontalContentAlignment="Right" FontWeight="Bold"/>-->
+        <!--<Label Content="NOMBRE" Margin="10,40,158,0" VerticalAlignment="Top" Height="26" HorizontalContentAlignment="Right" FontWeight="Bold"/>
+        <Label Content="APELLIDO" Margin="10,71,158,0" VerticalAlignment="Top" Height="25" HorizontalContentAlignment="Right" FontWeight="Bold"/>-->
+
 
         <!--<DataGrid Name="dgAccesos" Grid.Row="0" VerticalScrollBarVisibility="Visible" >
             <DataGrid.Resources>
